Fix tooltip message wrapping

--- a/packages/graphql-playground-react/src/styles/graphiql_dark.css
+++ b/packages/graphql-playground-react/src/styles/graphiql_dark.css
@@ -1291,8 +1291,6 @@ span.CodeMirror-selectedtext {
   position: fixed;
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
-  white-space: pre-wrap;
-  white-space: pre;
   z-index: 100;
 }
 
